Rendered scantron page for one section

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "sequelize": "^5.7.6"
+    "sequelize": "^5.7.6",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
