--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "install": "^0.12.2",
     "morgan": "^1.9.1",
+    "npm": "^6.9.0",
     "pg": "^7.10.0",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.7.2",
