--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "express": "^4.16.4",
     "install": "^0.12.2",
     "morgan": "^1.9.1",
@@ -19,6 +21,7 @@
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "react-test-renderer": "^16.8.6",
     "react-vis": "^1.11.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
