--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "install": "^0.12.2",
+    "jwks-rsa": "^1.4.0",
     "morgan": "^1.9.1",
     "npm": "^6.9.0",
     "pg": "^7.10.0",
